[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/oswald.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/title.gd" type="Script" id=2]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetupUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.77563
margin_right = 3.77563
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateServer" type="Button" parent="SetupUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.518
margin_top = -220.0
margin_right = 236.482
margin_bottom = -52.0
rect_scale = Vector2( 1.003, 0.996092 )
custom_fonts/font = ExtResource( 1 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServer" type="Button" parent="SetupUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.518
margin_top = 210.0
margin_right = 236.482
margin_bottom = 378.0
custom_fonts/font = ExtResource( 1 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIP" type="LineEdit" parent="SetupUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = 80.0
margin_right = 291.5
margin_bottom = 178.0
rect_scale = Vector2( 0.99004, 0.974613 )
custom_fonts/font = ExtResource( 1 )
text = "172.16.1.86"
align = 1
placeholder_text = "Enter IP Address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="SetupUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -420.0
margin_right = 291.5
margin_bottom = -322.0
rect_scale = Vector2( 0.99612, 1 )
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "Enter Username"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SetupUI/CreateServer" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="SetupUI/JoinServer" to="." method="_on_JoinServer_pressed"]
